# Data-Processing

./: README.md  pyproject.toml
app/: __init__.py  main.py
models/: __init__.py  db.py  file_storage.py
routers/: data_processing.py
schemas/: data_processing.py
services/: data_correction.py  file_manager.py  visualizer.py
tests/: sample_data.csv  test_data_processing.py
